--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuetify": "npm:@vuetify/nightly@next",
+    "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
