--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.2.2",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.28",
     "roboto-fontface": "*",
     "vue": "^3.2.45",
@@ -26,7 +27,8 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.11.12",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
