--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "lodash": "^4.17.21",
     "pinia": "^2.0.28",
+    "portal-vue": "^3.0.0-beta.0",
     "roboto-fontface": "*",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
