--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
+    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
