--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.config.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
-    }
-  ]
+  "compilerOptions": {
+    // это соответствует поддержке браузеров у Vue
+    "target": "esnext",
+    // это обеспечивает более строгий вывод для свойств данных в `this`
+    "strict": true,
+    // при использовании webpack 2+ или rollup, добавить поддержку tree-shaking:
+    "module": "esnext",
+    "moduleResolution": "node"
+  }
 }
