--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "paths": {
       "@/*": [
-          "./src/*"
+        "./src/*"
       ],
       "@interfaces/*": [
         "./src/interfaces/*"
@@ -19,6 +19,9 @@
       ],
       "@utils/*": [
         "./src/utils/*"
+      ],
+      "@store/*": [
+        "./src/app/providers/store/*"
       ],
     },
   }
