--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/webfontloader": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^20.0.3",
     "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
