изменение конфига для настройки работы github pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["vite/client", "node"],
     // это соответствует поддержке браузеров у Vue
     "target": "esnext",
     // это обеспечивает более строгий вывод для свойств данных в `this`
