--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,8 +1,9 @@
 {
-  "extends": "./tsconfig.app.json",
+  "extends": "./tsconfig.json",
   "exclude": [],
   "compilerOptions": {
     "composite": true,
+    "allowSyntheticDefaultImports": true,
     "lib": [],
     "types": ["node", "jsdom"]
   }
