--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "semi": ["error", "always"],
         "no-multi-spaces": ["error"],
         "no-trailing-spaces": ["error"],
+        "vue/comment-directive": 0,
         "vue/max-attributes-per-line": ["error", {
         "singleline": {
             "max": 1
