--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.2.2",
+    "gh-pages": "^5.0.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.28",
     "portal-vue": "^3.0.0-beta.0",
