--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dev": "vite",
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "start": "node index.js"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^1.2.2",
     "gh-pages": "^5.0.0",
+    "json-server": "^0.17.2",
     "lodash": "^4.17.21",
     "pinia": "^2.0.28",
     "portal-vue": "^3.0.0-beta.0",
@@ -53,5 +55,6 @@
     "vitest": "^0.25.6",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "^1.0.12"
-  }
+  },
+  "homepage": "https://ephemeral-croquembouche-7a64e7.netlify.app"
 }
